@@ -4,7 +4,9 @@
 new = label
 ## This constructor is called when there's an attribute with_mnemonic="true"
 new.with_mnemonic = label
-
+[Gtk.MenuItem]
+new.with_label = label
+new.with_mnemonic = label
 ##Containers' add functions
 [Gtk.Container]
 adds=add_with_properties
@@ -21,6 +23,7 @@ adds = put
 adds = add1;add2;pack1;pack2
 [Gtk.Layout]
 adds = put
+
 [Gtk.MenuShell]
 adds = append;prepend;insert; 
 add.insert = position
